--- a/WebApplication4/WebApplication4/Content/estilos-index1.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index1.css
@@ -1,4 +1,4 @@
-*{}
+*{margin: 0;padding: 0}
 #busqAvanzada{text-align: center; margin-top: 10px;}
 header{margin-bottom: 10px}
 #barra{background-color: #337ab7; color: white }
@@ -31,3 +31,30 @@ thead {
         color: white;
         font-weight: bold;
 }
+
+
+#barraLateral{
+    position: fixed;
+    top: 250px;   
+    left:0px;
+}
+#barraLateral li{
+    list-style: none;    
+    width: 60px;
+    height: 60px;    
+    cursor: pointer;    
+    -webkit-transition: width 0.2s;    
+    -moz-transition: width 0.2s; 
+}
+#barraLateral li a{    
+    display: block;
+    width: inherit;
+    height: inherit;    
+    text-decoration: none;
+    color: white;
+}
+#barraLateral li:hover{width: 70px}
+#barraLateral li:nth-of-type(1){background: red}
+#barraLateral li:nth-of-type(2){background: green}
+
+
